--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,22 @@
 @tailwind utilities;
 
 :root {
+  font-family: 'Poppins', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+
+}
+
+html,
+#app,
+body {
+  height: 100%;
+  width: 100%;
+  background-color: black;
+}
+
+/* 
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -90,4 +106,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
